<resources>
    <string name="app_name">tms-frontend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Maps</string>
    <string name="menu_work">Work</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_employees">Employees</string>
    <string name="menu_vehicles">Vehicles</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>